objects/Opt_Segment__c/Opt_Segment__c.object-meta.xml
<CustomObject>
    <label>Discount Guidance</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Guidances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>