objects/Opt_Segment__c/fields/Discount_Optimization_PID__c.field-meta.xml
<CustomField>
    <fullName>Discount_Optimization_PID__c</fullName>
    <label>Discount Optimization PID</label>
    <referenceTo>Discount_Optimization__c</referenceTo>
    <relationshipName>Discount_Guidances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>