objects/Opt_Segment__c/fields/Green__c.field-meta.xml
<CustomField>
    <fullName>Green__c</fullName>
    <label>Green%</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>