objects/Opt_Segment__c/fields/Margin_To_List__c.field-meta.xml
<CustomField>
    <fullName>Margin_To_List__c</fullName>
    <label>Margin To List</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>