objects/Opt_Segment__c/fields/Max_Percentile_Discount__c.field-meta.xml
<CustomField>
    <fullName>Max_Percentile_Discount__c</fullName>
    <label>Max Percentile Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>