objects/Opt_Segment__c/fields/Median_Discount__c.field-meta.xml
<CustomField>
    <fullName>Median_Discount__c</fullName>
    <label>Median Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>