objects/Opt_Segment__c/fields/Minimum_Percentile_Discount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Percentile_Discount__c</fullName>
    <label>Minimum Percentile Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>