objects/Opt_Segment__c/fields/No_Of_Transcation__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Transcation__c</fullName>
    <label>No Of Transaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>