objects/Opt_Segment__c/fields/Range_Discount__c.field-meta.xml
<CustomField>
    <fullName>Range_Discount__c</fullName>
    <label>Range Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>