objects/Opt_Segment__c/fields/Red__c.field-meta.xml
<CustomField>
    <fullName>Red__c</fullName>
    <label>Red%</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>