objects/Opt_Segment__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>