objects/Opt_Segment__c/fields/SD_Discount__c.field-meta.xml
<CustomField>
    <fullName>SD_Discount__c</fullName>
    <label>SD Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>