objects/Opt_Segment__c/fields/Valid__c.field-meta.xml
<CustomField>
    <fullName>Valid__c</fullName>
    <label>Valid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>No Data</fullName>
            </value>
            <value>
                <fullName>Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>