objects/Opt_Segment__c/fields/X3rd_Percentile__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Percentile__c</fullName>
    <label>3rd Percentile</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>