objects/Opt_Segment__c/fields/X97th_Percentile__c.field-meta.xml
<CustomField>
    <fullName>X97th_Percentile__c</fullName>
    <label>97th Percentile</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>