objects/Opt_Segment__c/fields/Yellow__c.field-meta.xml
<CustomField>
    <fullName>Yellow__c</fullName>
    <label>Yellow%</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>